; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_fixjob_callback.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_fixjob_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.session = type { i32 }
%struct.pgrp = type { i64 }
%struct.fixjob_iterargs = type { i32, %struct.session*, %struct.pgrp* }

@SESSION_NULL = common dso_local global %struct.session* null, align 8
@PGRP_NULL = common dso_local global %struct.pgrp* null, align 8
@PROC_RETURNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fixjob_callback(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.fixjob_iterargs*, align 8
  %6 = alloca %struct.pgrp*, align 8
  %7 = alloca %struct.pgrp*, align 8
  %8 = alloca %struct.session*, align 8
  %9 = alloca %struct.session*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to %struct.fixjob_iterargs*
  store %struct.fixjob_iterargs* %12, %struct.fixjob_iterargs** %5, align 8
  %13 = load %struct.fixjob_iterargs*, %struct.fixjob_iterargs** %5, align 8
  %14 = getelementptr inbounds %struct.fixjob_iterargs, %struct.fixjob_iterargs* %13, i32 0, i32 2
  %15 = load %struct.pgrp*, %struct.pgrp** %14, align 8
  store %struct.pgrp* %15, %struct.pgrp** %6, align 8
  %16 = load %struct.fixjob_iterargs*, %struct.fixjob_iterargs** %5, align 8
  %17 = getelementptr inbounds %struct.fixjob_iterargs, %struct.fixjob_iterargs* %16, i32 0, i32 1
  %18 = load %struct.session*, %struct.session** %17, align 8
  store %struct.session* %18, %struct.session** %8, align 8
  %19 = load %struct.fixjob_iterargs*, %struct.fixjob_iterargs** %5, align 8
  %20 = getelementptr inbounds %struct.fixjob_iterargs, %struct.fixjob_iterargs* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call %struct.pgrp* @proc_pgrp(i32 %22)
  store %struct.pgrp* %23, %struct.pgrp** %7, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call %struct.session* @proc_session(i32 %24)
  store %struct.session* %25, %struct.session** %9, align 8
  %26 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %27 = load %struct.pgrp*, %struct.pgrp** %6, align 8
  %28 = icmp ne %struct.pgrp* %26, %27
  br i1 %28, label %29, label %61

29:                                               ; preds = %2
  %30 = load %struct.session*, %struct.session** %9, align 8
  %31 = load %struct.session*, %struct.session** %8, align 8
  %32 = icmp eq %struct.session* %30, %31
  br i1 %32, label %33, label %61

33:                                               ; preds = %29
  %34 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %35 = call i32 @pgrp_lock(%struct.pgrp* %34)
  %36 = load i32, i32* %10, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %45

38:                                               ; preds = %33
  %39 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %40 = getelementptr inbounds %struct.pgrp, %struct.pgrp* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = add nsw i64 %41, 1
  store i64 %42, i64* %40, align 8
  %43 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %44 = call i32 @pgrp_unlock(%struct.pgrp* %43)
  br label %60

45:                                               ; preds = %33
  %46 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %47 = getelementptr inbounds %struct.pgrp, %struct.pgrp* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %48, -1
  store i64 %49, i64* %47, align 8
  %50 = icmp eq i64 %49, 0
  br i1 %50, label %51, label %56

51:                                               ; preds = %45
  %52 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %53 = call i32 @pgrp_unlock(%struct.pgrp* %52)
  %54 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %55 = call i32 @orphanpg(%struct.pgrp* %54)
  br label %59

56:                                               ; preds = %45
  %57 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %58 = call i32 @pgrp_unlock(%struct.pgrp* %57)
  br label %59

59:                                               ; preds = %56, %51
  br label %60

60:                                               ; preds = %59, %38
  br label %61

61:                                               ; preds = %60, %29, %2
  %62 = load %struct.session*, %struct.session** %9, align 8
  %63 = load %struct.session*, %struct.session** @SESSION_NULL, align 8
  %64 = icmp ne %struct.session* %62, %63
  br i1 %64, label %65, label %68

65:                                               ; preds = %61
  %66 = load %struct.session*, %struct.session** %9, align 8
  %67 = call i32 @session_rele(%struct.session* %66)
  br label %68

68:                                               ; preds = %65, %61
  %69 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %70 = load %struct.pgrp*, %struct.pgrp** @PGRP_NULL, align 8
  %71 = icmp ne %struct.pgrp* %69, %70
  br i1 %71, label %72, label %75

72:                                               ; preds = %68
  %73 = load %struct.pgrp*, %struct.pgrp** %7, align 8
  %74 = call i32 @pg_rele(%struct.pgrp* %73)
  br label %75

75:                                               ; preds = %72, %68
  %76 = load i32, i32* @PROC_RETURNED, align 4
  ret i32 %76
}

declare dso_local %struct.pgrp* @proc_pgrp(i32) #1

declare dso_local %struct.session* @proc_session(i32) #1

declare dso_local i32 @pgrp_lock(%struct.pgrp*) #1

declare dso_local i32 @pgrp_unlock(%struct.pgrp*) #1

declare dso_local i32 @orphanpg(%struct.pgrp*) #1

declare dso_local i32 @session_rele(%struct.session*) #1

declare dso_local i32 @pg_rele(%struct.pgrp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
